--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,29 @@
 * {
-    box-sizing: border-box;
-  }
-
-  .d-flex{
-    display: flex;
-  }
-  
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-nav img{
+
+body{
+  font-family: sans-serif;
+}
+
+
+
+
+.d-flex {
+  display: flex;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+nav img {
   width: 100px;
 }
 
@@ -23,15 +33,143 @@ nav img{
 }
 h5.nav-item.active-item {
   padding: 0 25px;
+  color: #f15932;
 }
 
 h5.nav-item {
   padding: 0 25px;
 }
+.intro-section.d-flex {
+  padding: 30px 20px 0 20px;
+}
 
 .left-section {
-  width:60%
+  width: 55%;
 }
 .right-section {
-  width:40%;
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
 }
+
+h3 {
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+h3 img {
+  width: 40px;
+}
+
+h1 {
+  font-size: 65px;
+  font-family: 'Fredoka One';
+  margin-top: 10px;
+}
+
+.sub-headlines {
+  padding-left: 70px;
+  margin: 30px 0;
+}
+
+h5.sub-headline {
+  font-size: 20px;
+  padding: 10px;
+  display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+
+.left-section .sub-headlines h5 img {
+  position: relative;
+  background-color: #fe6139;
+  border-radius: 90px;
+  padding: 5px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+p.text {
+  font-size: 12px;
+  /* padding-right: 131px; */
+}
+
+.action-btns {
+  margin-top: 30px;
+}
+button.action-btn {
+  font-size: 17px;
+  background-color: #f15932;
+  border: none;
+  padding: 10px 20px;
+  color: #fff;
+  border-radius: 100px;
+  margin-right: 25px;
+}
+
+
+
+img.discount {
+  position: absolute;
+  top: 230px;
+  width: 120px;
+  left: 30px;
+}
+.headphone-div img:last-child {
+  width: 400px;
+  position: relative;
+  /* left: 50px; */
+  z-index: -1;
+}
+.discount-content {
+  position: absolute;
+    top: 259px;
+    color: #fff;
+    left: 50px;
+}
+.discount-content h4 {
+  font-size: 10px;
+  text-align: center;
+}
+
+
+
+.discount-content h1 {
+  font-size: 35px;
+}
+
+.dots {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  margin-right: 47px;
+}
+
+.dot.yellow-dot,.dot.tomato-dot,.dot.black-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+}
+
+.dot.yellow-dot{
+  background-color: #fbd104;
+}
+
+.dot.tomato-dot{
+  background-color: #fe5e35;
+  margin: 0 20px;
+}
+.dot.black-dot{
+  background-color: #000000;
+}
+
+.right-section .action-btn{
+  margin-top: 15px;
+}
+
