--- a/css/index.css
+++ b/css/index.css
@@ -20,16 +20,18 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 20px;
+  width: 1250px;
+  margin: 0 auto;
 }
 
 nav img {
-  width: 100px;
+  width: 130px;
 }
 
 .nav-items {
   display: flex;
-  font-size: 20px;
+  font-size: 24px;
 }
 h5.nav-item.active-item {
   padding: 0 25px;
@@ -40,7 +42,10 @@ h5.nav-item {
   padding: 0 25px;
 }
 .intro-section.d-flex {
-  padding: 30px 20px 0 20px;
+  width: 1200px;
+    margin: 0 auto;
+    height: 92vh;
+    padding-top: 30px;
 }
 
 .left-section {
@@ -51,9 +56,11 @@ h5.nav-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  position: relative;
 
+}
+
+.headphone-div {
+  position: relative;
 }
 
 h3 {
@@ -74,7 +81,7 @@ h1 {
 
 .sub-headlines {
   padding-left: 70px;
-  margin: 30px 0;
+  margin: 40px 0;
 }
 
 h5.sub-headline {
@@ -96,42 +103,44 @@ h5.sub-headline {
 }
 
 p.text {
-  font-size: 12px;
-  /* padding-right: 131px; */
+  font-size: 14px;
+  color: #7e7e7e;
+  margin-top: 60px;
 }
 
 .action-btns {
   margin-top: 30px;
 }
 button.action-btn {
-  font-size: 17px;
-  background-color: #f15932;
+  background-color: #fe6139;
   border: none;
-  padding: 10px 20px;
-  color: #fff;
-  border-radius: 100px;
-  margin-right: 25px;
+  padding: 16px 34px;
+  border-radius: 50px;
+  color: #FFFFFF;
+  font-size: 17px;
+  cursor: pointer;
 }
 
 
 
 img.discount {
   position: absolute;
-  top: 230px;
-  width: 120px;
-  left: 30px;
+    top: 270px;
+    width: 120px;
+    left: -2px;
 }
 .headphone-div img:last-child {
-  width: 400px;
+  width: 500px;
   position: relative;
   /* left: 50px; */
   z-index: -1;
+  top: -20px;
 }
 .discount-content {
   position: absolute;
-    top: 259px;
-    color: #fff;
-    left: 50px;
+  top: 296px;
+  color: #fff;
+  left: 28px;
 }
 .discount-content h4 {
   font-size: 10px;
